Revision history for Perl extension Metabrik.

1.22.1 

1.22.0 Fri Apr 15 18:09:26 CEST 2016
   - feature: core::log: allow_log_override Attribute to allow overriding default log Brik
              Turned off by default to avoid messing with logging.
   - feature: core::log: caller_info_prefix, caller_verbose_prefix, ..., caller_debug_prefix 
              Attributes to prefix log messages by Brik name (or not).
   - bugfix: core::context: do initialize core::context from within new_brik_run Command
   - new: core::log: message Command

1.21.2 N/A
   - bugfix: Metabrik: preinit and check_use_properties to be run only one time per Brik

1.21.1 Wed Mar  2 07:46:01 CET 2016
   - bugfix: core::shell: $HOME set to /tmp if not defined
   - bugfix: core::log: must preinit before init for default Attributes values to be properly set
   - bugfix: metabrik: checks properties and default Attribute values in brik_preinit:
             $self->datadir can now be used from within brik_use_properties()

1.21.0 Fri Feb  5 07:50:14 CET 2016
   - feature: core::shell: ps1 Attribute to customize prompt (limited)
   - bugfix: core::shell: run_run Command to call execute Command from shell::history and not 
             exec Command
   - update: core::log: brik_preinit() moved from Repository log::* so replacing a log Brik
             by another one becomes transparent for users.
   - update: Metabrik: more checks and verbose on Brik creation failure (when new() calls fail)

1.20.5 Fri Jan 29 18:57:06 CET 2016
   - bugfix: Metabrik: brik_help_run_empty_array_arg Command to check if Argument is an ARRAY

1.20.4 Tue Jan 26 21:01:10 CET 2016
   - update: metabrik: do not prefix help strings with Brik name nor Command name when user 
             fails to use a Command the right wat
   - bugfix: core::shell: display Brik name and Command name when user calls the help Command

1.20.3 Tue Jan 19 14:17:32 CET 2016
   - bugfix: makes logging to STDOUT unbuffered by default when using core::log