@@ -9,7 +9,7 @@ use warnings;
 
 # Breaking.Feature.Fix
 our $VERSION = '1.22';
-our $FIX = '0';
+our $FIX = '1';
 
 use base qw(Metabrik);
 
