@@ -1,6 +1,8 @@
 Revision history for Perl extension Metabrik.
 
 1.22.1 
+   - bugfix: core::context: sets $USE variable on use when a Brik requires dependencies
+   - bugfix: core::shell: handles correctly the exit Command so it returns a code number
 
 1.22.0 Fri Apr 15 18:09:26 CEST 2016
    - feature: core::log: allow_log_override Attribute to allow overriding default log Brik
